index, assets & README updates

--- a/index.html
+++ b/index.html
@@ -6,15 +6,34 @@
     <!-- CSS reset uses normalize.css via a CDN -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Document</title>
+    <title>roughnut's portfolio</title>
 </head>
 <body>
-    <h1>roughnut</h1>
-    <nav>
-        <ul>
-            <li></li>
-            <li></li>
-        </ul>
-    </nav>
+    <header>
+        <h1>roughnut</h1>
+        <nav>
+            <ul class="hamburger-menu">
+                <li class="menu-hover"></li>
+                <li class="menu-hover"></li>
+                <li class="menu-hover"></li>
+            </ul>
+            <!-- <ul>
+                <li><a href="" id="about">About</a></li>
+                <li><a href="" id="portfolio">Portfolio</a></li>
+                <li><a href="" id="contact">Contact</a></li>
+            </ul> -->
+        </nav>
+    </header>
+    <main>
+        <!-- About section -->
+        <section id="about"></section>
+        <!-- Hero app section -->
+        <section id="portfolio"></section>
+        <!-- Portfolio section -->
+        <section></section>
+        <!-- Contact section -->
+        <section id="contact"></section>
+    </main>
+    <footer></footer>
 </body>
 </html>
