--- a/index.html
+++ b/index.html
@@ -10,29 +10,63 @@
 </head>
 <body>
     <header>
-        <h1>roughnut</h1>
+        <h1>roughnut.dev</h1>
         <nav>
             <ul class="hamburger-menu">
                 <li class="menu-hover"></li>
                 <li class="menu-hover"></li>
                 <li class="menu-hover"></li>
             </ul>
-            <!-- <ul>
-                <li><a href="" id="about">About</a></li>
-                <li><a href="" id="portfolio">Portfolio</a></li>
-                <li><a href="" id="contact">Contact</a></li>
-            </ul> -->
+            <div class="dropdown-menu">
+                <ul >
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#portfolio">Portfolio</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </div>
+            <div class="wider-menu">
+                <ul >
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#portfolio">Portfolio</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </div>
         </nav>
     </header>
     <main>
         <!-- About section -->
-        <section id="about"></section>
-        <!-- Hero app section -->
-        <section id="portfolio"></section>
+        <section id="about">
+            <h2>About me</h2>
+            <h3>The only dev named after an ice cream!</h3>
+            <img src="./assets/images/caramel-roughnut.png" alt="caramel rough nut">
+            <h3>Of course, the coding is pretty sweet</h3>
+        </section>
         <!-- Portfolio section -->
-        <section></section>
+        <section id="portfolio">
+            <h2>Portfolio</h2>
+            <div class="hero-overlay">
+                <a href="https://roughnut.github.io/bootcamp-challenge-01-html-css-git-code-refactor/" target="_blank" alt="link to my work for Horiseon Digital Marketing Agency">
+                    <img src="./assets/images/digital-marketing-meeting.jpg" alt="marketing people in a meeting" class="hero-app">
+                    <p class="hero-overlay-text">Horiseon Digital Marketing Agency</p>
+                </a>
+            </div>
+            <h2>Other Work</h2>
+            <div class="other-work-overlay">
+                <a href="https://roughnut.github.io/m01-mini-project-landing-page/" alt="link to my landing page template" target="_blank">
+                    <img src="./assets/images/roughnut-under-construction-landing-page.png" alt="image placeholder" class="other-apps">
+                    <p class="other-work-overlay-text">Landing Page Template</p>
+                </a>
+            </div>
+            <div class="other-work-overlay">
+                <img src="./assets/images/roughnut-img-placeholder.png" alt="image placeholder" class="other-apps">
+                <p class="other-work-overlay-text">Placeholder for other projects</p>
+            </div>
+          
+        </section>
         <!-- Contact section -->
-        <section id="contact"></section>
+        <section id="contact">
+            <h2>Contact me</h2>
+        </section>
     </main>
     <footer></footer>
 </body>
